Fix close button alignment inside text field in all layouts.

--- a/assets/sass/components/entity-search/_googlesitekit-entity-search.scss
+++ b/assets/sass/components/entity-search/_googlesitekit-entity-search.scss
@@ -64,6 +64,7 @@
 
 		.autocomplete__input {
 			height: 34px;
+			min-height: 34px;
 			padding: 0 16px;
 
 			@media ( max-width: $bp-tablet ) {
